Update code style
Remove Java 9 deprecations
Combine catch blocks